# amemu

./: .gitignore  README.md  config.py  demo.ipynb  main.py  playground.ipynb  pyproject.toml  requirements.txt  sampleLHS.R  setup.py  test.ipynb  trainingpoints.py
amemu/: config.py  final.ipynb  main.py  playground.ipynb  prediction.py  trainingpoints.py
amemu/data/: lhs_500.csv
amemu/notebook/: final.ipynb  playground.ipynb  tensorflow.ipynb
amemu/src/: cosmology.py
amemu/utils/: helpers.py
data/: cosmologies_lhs_1000.csv  cosmologies_lhs_500.csv  lhs_1000.csv  pk_linear_lhs_1000.csv  pk_linear_lhs_500.csv  pk_nonlin_lhs_1000.csv
gps/500/: alpha_500_wave_0.pkl  alpha_500_wave_10.pkl  alpha_500_wave_13.pkl  alpha_500_wave_14.pkl  alpha_500_wave_17.pkl  alpha_500_wave_19.pkl  alpha_500_wave_2.pkl  alpha_500_wave_21.pkl  alpha_500_wave_24.pkl  alpha_500_wave_27.pkl  alpha_500_wave_28.pkl  alpha_500_wave_29.pkl  alpha_500_wave_31.pkl  alpha_500_wave_35.pkl  alpha_500_wave_36.pkl  alpha_500_wave_37.pkl  alpha_500_wave_38.pkl  alpha_500_wave_6.pkl  alpha_500_wave_7.pkl  params_500_wave_0.pkl  params_500_wave_11.pkl  params_500_wave_13.pkl  params_500_wave_14.pkl  params_500_wave_15.pkl  params_500_wave_16.pkl  params_500_wave_18.pkl  params_500_wave_19.pkl  params_500_wave_21.pkl  params_500_wave_23.pkl  params_500_wave_24.pkl  params_500_wave_27.pkl  params_500_wave_28.pkl  params_500_wave_34.pkl  params_500_wave_35.pkl  params_500_wave_36.pkl  params_500_wave_6.pkl  params_500_wave_7.pkl  (+17 more)
src/: cosmology.py
test/: test_pklin.py
utils/: helpers.py
(+126 files in other folders)
