[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amemu"
version = "0.0.17"
authors = [{ name="Arrykrishna Mootoovaloo", email="arrykrish@gmail.com" }]
description = "Emulator for the Linear Matter Power Spectrum"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/Harry45/amemu"
"Bug Tracker" = "https://github.com/Harry45/amemu/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}